[gd_scene load_steps=31 format=2]

[ext_resource path="res://Assets/Images/player/player_walk.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Images/player/player_old.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/player/player_death.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/player/player_shoot_pistol.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/player/player_shoot_uzi.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/player/player.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 12.5
} ]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": false,
"name": "death",
"speed": 4.0
}, {
"frames": [ SubResource( 21 ), SubResource( 16 ), SubResource( 21 ), SubResource( 17 ) ],
"loop": true,
"name": "shoot_pistol",
"speed": 10.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "shoot_uzi",
"speed": 20.0
}, {
"frames": [ SubResource( 20 ) ],
"loop": true,
"name": "unarmed",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 24.0
height = 36.0

[sub_resource type="CircleShape2D" id=24]
radius = 13.0

[node name="Player" type="KinematicBody2D" groups=["Net", "Player"]]
script = ExtResource( 2 )

[node name="Feet" type="AnimatedSprite" parent="."]
position = Vector2( -1, 12 )
scale = Vector2( 2, 2 )
frames = SubResource( 7 )
offset = Vector2( 16, -6 )

[node name="Body" type="AnimatedSprite" parent="."]
position = Vector2( 32, 3 )
scale = Vector2( 2, 2 )
frames = SubResource( 23 )
animation = "unarmed"

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Reload_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Hit_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Shoot_point" type="Position2D" parent="."]
position = Vector2( 89, 32 )

[node name="Shoot_point2" type="Position2D" parent="."]
position = Vector2( 90, -32 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 24 )

[node name="Network_tick" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[connection signal="timeout" from="Reload_timer" to="." method="_on_Reload_timer_timeout"]
[connection signal="timeout" from="Hit_timer" to="." method="_on_Hit_timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="Network_tick" to="." method="_on_Network_tick_timeout"]
